OK THIS should fix top alignment of featured text

--- a/a2/style.css
+++ b/a2/style.css
@@ -99,7 +99,7 @@ body {
     display: flex;
     text-align: center;
     position: absolute;
-    top: 8px;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
     align-items: baseline;
